syntax = "proto3";

package user;

option go_package = "./proto/user;user";

service User {
	// 注册
	rpc Register(UserRegisterRequest) returns (UserRegisterResponse) {}
	// 登陆
	rpc Login(UserLoginRequest) returns (UserLoginResponse) {}
	// 查询用户信息
	rpc GetUserInfo(UserInfoRequest) returns (UserInfoResponse) {}
}

message UserInfoRequest {
	string user_name = 1;
}

message UserInfoResponse {
	int64 user_id = 1;
	string user_name = 2;
	string first_name = 3;
}

message UserRegisterRequest {
	string user_name = 1;
	string first_name = 2;
	string pwd = 3;
	// ... 其他信息
}

message UserRegisterResponse {
	string message = 1;
}

message UserLoginRequest {
	string user_name = 1;
	string pwd = 2;
}

message UserLoginResponse {
	bool is_success = 1;
}

