syntax = "proto3";
package pb;

service UserService{
    rpc CheckPassword(LoginRequest) returns (LoginResponse) {}
}

message LoginRequest {
    string Username = 1;
    string Password = 2;
}

message LoginResponse {
    string Ret = 1;
    string err = 2;
}
